--- a/.github/workflows/dev-builder.yml
+++ b/.github/workflows/dev-builder.yml
@@ -2,7 +2,7 @@ name: "Dev-Builder"
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ dev ]
     tags-ignore:
       - 'v*'
     paths-ignore: 
