--- a/.github/workflows/dev-builder.yml
+++ b/.github/workflows/dev-builder.yml
@@ -11,7 +11,7 @@ on:
       - assets/*
 jobs:
   deps:
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/dev' }}
     name: "Build"
     runs-on: windows-latest
     steps:
