--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,10 @@ on:
 jobs:
   deps:
     name: "test"
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Delete previous drafts
-        uses: Garulf/delete-draft-releases@3e90ea8ddc6d0e11a323e987c3407acb271684a9
+        uses: Garulf/delete-draft-releases@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
