--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete previous drafts
-        uses: Garulf/delete-draft-releases@master
+        uses: Garulf/delete-preleases@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
