--- a/.github/workflows/dev-builder.yml
+++ b/.github/workflows/dev-builder.yml
@@ -4,7 +4,7 @@ on:
 jobs:
   deps:
     name: "Build"
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
