--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-python-twitch-client==0.6.0
+git+https://github.com/Garulf/python-twitch-client@add-search-channel-endpoint
 requests==2.25.1
 flox-lib==0.14.3
