--- a/SettingsTemplate.yaml
+++ b/SettingsTemplate.yaml
@@ -3,7 +3,7 @@ body:
     attributes:
       name: description
       description: >
-        Please provide a Client ID token and OAuth token (New Twitch API requires a OAuth token).
+        Please provide a Client ID token and Client Secret (New Twitch API requires a OAuth token).
   - type: input
     attributes:
       name: client_id
