--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git+https://github.com/Garulf/python-twitch-client@add-search-channel-endpoint
+git+https://github.com/Garulf/python-twitch-client
 requests==2.25.1
 flox-lib==0.17.0
